Mon Jan 21 00:36:53 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c, gtkexport.c,
	gtkoptions.c, import.c, makebearoff.c, makehyper.c, relational.c,
	render.c, rollout.c, sgf.c: replace uint with unsigned int

Sat Jan 19 21:45:51 CET 2008 Christian Anthon <anthon@kiku.dk>

	* eval.c: fix a potential signed/unsigned problem in crashed net

Sat Jan 19 09:58:13 CET 2008 Christian Anthon <anthon@kiku.dk>

	* drawboard.c: fix board after uint changes

Tue Jan 15 22:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg-types.h + others: change board type to unsigned
		hopefully not breaking anything on the way (esp. bearoff)

Tue Jan 15 19:05:58 CET 2008 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, dice.c, eval.c, gnubg.c, gtkboard.c,
	gtkexport.c, gtkgame.c, gtkmovelist.c, gtkoptions.c, import.c,
	makebearoff.c, makehyper.c, multithread.c, play.c, render.c, sgf.c,
	board3d/drawboard3d.c, relational.c, rollout.c: Fix some minor
	uint//int gcc warnings

Sun Jan 13 09:03:18 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, bearoff.c, bearoff.h, external_l.l, external_y.y,
	gnubg.c, gtkgame.c, gtkgame.h, gtkpanels.c, multithread.c,
	multithread.h, sound.c, sound.h, board3d/fun3d.h, lib/cache.c,
	non-src/external_y.c, non-src/external_l.c: fix some incomplete or
	missing prototypes

Sun Jan 13 01:07:21 CET 2008 Christian Anthon <anthon@kiku.dk>

	* bearoffdump.c, gnubg.c, makehyper.c, multithread.c, sound.c:
	compiler warnings and Sleep is a win32 function

Sun Jan 13 00:36:48 CET 2008 Christian Anthon <anthon@kiku.dk>

	* configure.in, common.h: change how acosf, signbit and lrint are
	checked for to allow to compile with -Werror

Sat Jan 12 23:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* sound.c, set.c, gnubg.c: Re-introduce exit sound, but disabled by default

Wed Jan  2 15:48:02 CET 2008 Christian Anthon <anthon@kiku.dk>
